# audio-chat

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  database.py  debug_agent.py  debug_request.py  docker-compose.yml  generate_final_podcast.py  main.py  models.py  pyproject.toml  test_client.py  test_podcast.py
agents/: podcast_flow.py
agents/fact_curator/: README.md  agent.py
agents/fact_extractor/: README.md  agent.py
agents/fact_reconciler/: README.md  agent.py
agents/persona_generator/: README.md  agent.py
agents/script_critic/: README.md  agent.py
agents/script_writer/: README.md  agent.py
frontend/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.vue  style.css
frontend/src/router/: index.ts
frontend/src/views/: Dashboard.vue  ProjectDetail.vue
routers/: audio.py  podcast.py  projects.py
utils/: sse.py
