[project]
name = "audio-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "arize-phoenix-otel>=0.16.1",
    "audioop-lts>=0.2.2",
    "deprecated>=1.3.1",
    "fastapi[standard]>=0.136.1",
    "google-adk>=1.1.1",
    "google-genai>=2.4.0",
    "kokoro>=0.9.4",
    "opentelemetry-exporter-otlp>=1.42.0",
    "opentelemetry-instrumentation-fastapi>=0.63b0",
    "opentelemetry-sdk>=1.42.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.49",
    "torch>=2.12.0",
]
